--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -6663,3 +6663,42 @@ iframe{
 .author-type ul li:last-child{
   border-right: 0!important;
 }
+
+.has-loader{
+  position: relative;
+}
+
+.loader {
+  position: relative;
+}
+
+.loader::after,
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  width: 33px;
+  height: 32px;
+  border-radius: 50%;
+  background: #333333;
+  position: absolute;
+  right: 8px;
+  top: 7px;
+  animation: animloader 2s linear infinite;
+  opacity: 0;
+}
+
+.loader::after {
+  animation-delay: 1s;
+}
+
+@keyframes animloader {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
