--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -452,7 +452,7 @@ figure {
   font-size: 16px;
   /* line-height: 156%; */
   letter-spacing: 0.3px;
-  color: var(--color-gray_lite);
+  color: #000000;
   padding: 15px 32px;
   background: #ffffff;
   border: 1px solid #c0c0c0;
@@ -1369,11 +1369,11 @@ figure {
 }
 
 .footer__main .title {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 22px;
   line-height: 1.5;
   letter-spacing: -0.3px;
-  color: #1e2833;
+  color: #000000;
   margin: 0 0 20px;
   max-width: 245px;
 }
@@ -1419,7 +1419,7 @@ figure {
   font-size: 15px;
   line-height: 1.2;
   letter-spacing: -0.204545px;
-  color: var(--color-gray);
+  color: #000000;
   transition: 0.3s;
 }
 
@@ -1463,7 +1463,7 @@ figure {
   font-size: 15px;
   line-height: 1.3;
   letter-spacing: -0.204545px;
-  color: var(--color-gray);
+  color: #000000;
   display: inline-block;
 }
 
@@ -6033,11 +6033,11 @@ label.pseudo-checkbox {
 
 .form_header .dec {
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--dark-color);
+  color: #000000;
 }
 
 .form_container {
@@ -6051,8 +6051,8 @@ label.pseudo-checkbox {
 
 .form-header__highlight-color {
   padding: 16px 32px;
-  background-color: var(--color-highlight);
-  color: #333333;
+  background-color: var(--color-dark);
+  color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 3px 3px 0px 0px;
   text-align: center;
@@ -6060,7 +6060,7 @@ label.pseudo-checkbox {
 
 .form_body .form_btn:hover {
   background: var(--color-highlight);
-  color: #333333;
+  color: #ffffff;
 }
 
 .label label{
@@ -6074,11 +6074,11 @@ label.pseudo-checkbox {
 .form_body .form_btn {
   padding: 10px 0;
   width: 100%;
-  background: #333333;
+  background: var(--color-dark);
   border-radius: 4px;
   font-size: 20px;
   line-height: 23px;
-  color: var(--light-color);
+  color: #ffffff;
   cursor: pointer;
   border: none;
   margin-bottom: 30px;
@@ -6087,11 +6087,11 @@ label.pseudo-checkbox {
 
 .form-header__highlight-color .title {
   font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
+  font-weight: 600;
+  font-size: 28px;
   line-height: 1.25;
   text-align: center;
-  color: #333333;
+  color: #ffffff;
 }
 
 .form_body {
@@ -6206,65 +6206,168 @@ body .form textarea{
 }
 }
 
-/*******************************************
-*	  	faq page
-********************************************/
+/* ******************************** */
+/* ********** FAQ Section ********* */
+/* ******************************** */
+.faq-main {
+  padding-top: 124px;
+}
+
 .faq {
-  padding: 100px 15px;
-  border-top: 1px solid #dddddd;
-  border-bottom: 1px solid #dddddd;
+  padding: 80px 0;
 }
 
-.form_header.m-48 {
-  margin-bottom: 45px;
+.faq__block {
+  border-radius: 16px;
+  border: 1px solid #eaeae965;
+  background-color: var(--light-color);
+  padding: 90px 75px;
+  box-shadow: 0 25px 115px 0 #20248a0f;
 }
 
-.accordion_container {
-  max-width: 817px;
-  width: 100%;
-  margin: 0 auto;
+.faq__item {
+  padding: 0 40px 40px;
+  margin-bottom: 40px;
+  border-bottom: 1px solid #eaeae9;
 }
 
-.arrow-animate {
-  transform: rotateX(180deg);
+.faq__item:last-child {
+  margin: 0;
+  border: none;
 }
 
-.accordion .accordion_header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 14px 32px;
-  background: var(--gray-color);
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 3px 3px 0px 0px;
+.faq__item-header {
   cursor: pointer;
-  background-color: var(--color-highlight);
+  position: relative;
 }
 
+.faq__item-title {
+  font-size: 24px;
+  line-height: 1.3;
+  font-family: var(--global-font);
+  color: var(--dark-color);
+  margin: 0;
+  font-weight: 500;
+  transition: 0.3s;
+  display: flex;
+  gap: 8px;
+  padding-right: 40px;
+}
+
+.faq__item-title:hover,
+.active-item .faq__item-title {
+  color: #6042EC;
+}
+
+.faq__item__collapse-icon,
+.faq__item__collapse-icon::after {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 2px;
+  height: 16px;
+  background-color: #000000;
+  transform: translateY(-50%);
+  transition: 0.3s;
+}
+
+.faq__item__collapse-icon::after {
+  content: "";
+  height: 2px;
+  width: 18px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.active-item .faq__item-header .faq__item__collapse-icon {
+  transform: translateY(-50%) rotate(-90deg);
+  background-color: #6042EC;
+}
+
+.active-item .faq__item-header .faq__item__collapse-icon::after {
+  transform: translate(-50%, -50%) scale(0.1);
+  background-color: #6042EC;
+}
+
+.faq__item-body {
+  display: none;
+  padding-top: 15px;
+}
+
+.faq__item-dsc {
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #000000;
+  max-width: 90%;
+}
+
+@media (max-width: 1200px) {
+  .faq__block {
+    border-radius: 16px;
+    padding: 50px;
+  }
+
+  .faq__item {
+    padding: 0 20px 20px 10px;
+  }
+}
+
+@media (max-width: 991px) {
+  .faq-main {
+    padding-top: 100px;
+  }
+
+  .faq {
+    padding: 60px 0;
+  }
+
+  .faq__item-title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .faq {
+    padding: 40px 0;
+  }
+
+  .faq__item {
+    margin-bottom: 30px;
+  }
+
+  .faq__item-title {
+    font-size: 17px;
+  }
+
+  .faq__item-dsc {
+    font-size: 15px;
+    max-width: 100%;
+  }
+
+  .faq__block {
+    padding: 30px;
+  }
+
+  .faq__item {
+    padding: 0 10px 20px 0;
+  }
+
+  .faq__item__collapse-icon {
+    height: 12px;
+  }
+
+  .faq__item__collapse-icon::after {
+    width: 14px;
+  }
+}
+
+/* Term page */
 .term_container {
   max-width: 817px;
   width: 100%;
   margin: 0 auto;
-}
-
-.accordion .accordion_title {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 1.25;
-  color: #333333;
-  margin: 0;
-}
-
-.faq .faq_acc-content {
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 16px 32px;
-  background: var(--light-color);
-  display: none;
-}
-
-.faq .active {
-  display: block;
 }
 
 @media (max-width: 1024px) {
@@ -6287,22 +6390,13 @@ body .form textarea{
   .form_header.m-48 {
     margin-bottom: 15px;
   }
-
-  .faq .accordion .accordion_title {
-    font-size: 20px;
-    flex: 1;
-  }
 }
 
 @media (max-width: 575px) {
   .Registration,
   .privacy,
-  .faq {
+   {
     padding: 40px 15px;
-  }
-
-  .faq .accordion .accordion_title {
-    font-size: 18px;
   }
 }
 
