--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -3621,8 +3621,7 @@ border-radius: 50%;
 
 .profile-banner img {
   width: 100%;
-  object-fit: cover;
-  height: 385px;
+  aspect-ratio: 3 / 1.2;
 }
 
 .profile-banner .edit-banner{
@@ -4224,15 +4223,6 @@ border-radius: 50%;
     font-size: 15px;
   }
 
-  .profile-banner img{
-    height: 220px;
-  }
-
-  .profile-banner img{
-    height: 100%;
-    object-fit: cover;
-  }
-
   .author-summary{
     gap: 30px 20px;
   }
@@ -4302,10 +4292,6 @@ border-radius: 50%;
 @media (max-width: 575px) {
   .author-summary .unit{
     width: 100%;
-  }
-
-  .profile-banner img{
-    height: 185px;
   }
 
   .author-summary .dsc{
