--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -3624,6 +3624,16 @@ border-radius: 50%;
   aspect-ratio: 3 / 1.2;
 }
 
+#add-link{
+  background-color: var(--color-dark);
+  color: #ffffff;
+  border: 0;
+  padding: 5px 15px 7px;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
 .profile-banner .edit-banner{
   position: absolute;
   right: 20px;
