--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -30,6 +30,8 @@ body {
   font-family: var(--base-font);
   font-weight: 400;
   overflow-x: hidden;
+  font-size: 18px;
+  line-height: 1.6;
 }
 
 textarea{
@@ -89,12 +91,16 @@ figure {
   }
 }
 
+.main-figure-group .slick-slide{
+  height: initial!important;
+}
+
 .container-alt2 {
   width: clamp(320px, 85%, 870px);
 }
 
 .leading-cards .card-wrap .dsc{
-  max-height: 68px;
+  max-height: 83px;
   overflow: hidden;
 }
 
@@ -224,7 +230,7 @@ figure {
 
 .main-header .link {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 156%;
   color: var(--color-dark);
   transition: 0.3s;
@@ -462,9 +468,9 @@ figure {
   max-width: 800px;
 }
 
-.hero .excerpt {
+.hero p {
   max-width: 570px;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 138%;
   letter-spacing: 0.3px;
   color: var(--color-gray_lite);
@@ -480,7 +486,7 @@ figure {
 
 .hero__form .input {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   /* line-height: 156%; */
   letter-spacing: 0.3px;
   color: #000000;
@@ -496,7 +502,7 @@ figure {
   border: none;
   background-color: var(--color-dark);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: 0.3px;
   color: #ffffff;
   padding: 15px 27px;
@@ -865,7 +871,7 @@ figure {
 }
 
 .entry-content p{
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.6;
   color: #000000;
   font-family: 'EB Garamond', serif!important;
@@ -893,7 +899,7 @@ figure {
 
 .fig-content .subtitle {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 138%;
   letter-spacing: 0.3px;
   margin: 0 10px;
@@ -936,7 +942,7 @@ figure {
 .fig-content .heading {
   margin: 0 0 10px;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 156%;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -944,7 +950,7 @@ figure {
 
 .fig-content .dsc {
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 156%;
   letter-spacing: 0.3px;
   color: var(--color-gray_extra-lite);
@@ -1050,7 +1056,7 @@ figure {
 }
 
 .cards-holder .title__sub {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 138%;
   text-align: center;
   letter-spacing: 0.3px;
@@ -1112,7 +1118,7 @@ figure {
 
 .card .bio {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-dark_lite);
   padding-bottom: 15px;
@@ -1130,7 +1136,7 @@ figure {
 }
 
 .card .dsc {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: #000000;
   margin: 0 0 15px;
@@ -1248,7 +1254,7 @@ figure {
   }
 
   .card .title {
-    font-size: 16px;
+    font-size: 18px;
     /* margin: 0 0 10px; */
   }
 
@@ -1302,7 +1308,7 @@ figure {
 }
 
 .cta .text {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 155%;
   text-align: center;
   letter-spacing: 0.3px;
@@ -1574,7 +1580,7 @@ figure {
   }
 
   .footer__widget .heading {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .footer__logo img {
@@ -1642,7 +1648,7 @@ figure {
   border-radius: 40px;
   padding: 13px 20px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   color: var(--color-dark_lite);
   width: 345px;
@@ -1681,7 +1687,7 @@ figure {
 
 .yes-no-btn .switch span{
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 16px;
   letter-spacing: 0.3px;
   color: #333333;
@@ -1769,7 +1775,7 @@ figure {
 }
 
 .profile-dropdown .link {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 156%;
   color: var(--color-gray);
   margin-bottom: 15px;
@@ -1874,13 +1880,13 @@ figure {
   background-color: var(--light-color);
   position: relative;
   border-radius: 15px;
-  max-width: 560px;
+  max-width: 750px;
   width: 100%;
 }
 
 .modal .title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-gray);
   margin: 0;
@@ -1910,7 +1916,7 @@ figure {
 }
 
 .modal__form .label {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   color: var(--color-gray);
   margin: 0 0 10px;
@@ -1924,7 +1930,7 @@ figure {
   box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.06);
   border-radius: 8px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   color: #000000;
   padding: 9px 20px;
@@ -1995,7 +2001,7 @@ figure {
   .modal__form .label,
   .modal__form .input,
   .modal__form .textarea {
-    font-size: 16px;
+    font-size: 18px;
   }
 
 .modal__form .input, .modal__form .textarea{
@@ -2055,7 +2061,7 @@ figure {
   background-color: var(--color-dark);
   border-radius: 8px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--light-color);
@@ -2089,7 +2095,7 @@ figure {
 .tab-panel .tab-link {
   display: block;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -2119,7 +2125,7 @@ figure {
 
 .tab-content .message {
   max-width: 650px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-gray_lite);
   margin: 0;
@@ -2172,7 +2178,7 @@ figure {
 
 .title-bar .select {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 131%;
   letter-spacing: -0.02em;
   color: #262628;
@@ -2291,7 +2297,7 @@ figure {
 }
 
 .card .ratting-poing {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   vertical-align: text-bottom;
   letter-spacing: 0.3px;
@@ -2383,7 +2389,7 @@ figure {
   }
 
   .title-bar .select {
-    font-size: 16px;
+    font-size: 18px;
     padding: 12px 25px;
   }
 
@@ -2523,7 +2529,7 @@ figure {
 
 .breadcrumb__item,
 .breadcrumb__link {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 156%;
   color: #000000;
   transition: 0.3s;
@@ -2699,7 +2705,7 @@ figure {
 
 .block-content .user__name {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.18;
   color: var(--color-gray_lite);
   margin: 0;
@@ -2710,7 +2716,7 @@ figure {
 }
 
 .block-content .text-gray {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 156%;
   color: var(--color-gray_extra-lite);
   margin: 0;
@@ -2776,7 +2782,7 @@ figure {
 
 .category__item .price {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.3;
   letter-spacing: -0.02em;
   color: #262628;
@@ -2800,7 +2806,7 @@ figure {
 .block-content .btn,
 .btn-lite {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-dark);
@@ -2826,7 +2832,7 @@ figure {
 .block-content .quantity-field {
   font-family: var(--base-font);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 88%;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -2860,7 +2866,7 @@ figure {
 
 .ensure-text .para {
   font-weight: 400;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 1.3;
   color: var(--color-gray);
   margin: 0;
@@ -3104,7 +3110,7 @@ figure {
 
 .tab-btn {
   padding: 9px 8px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-gray);
   display: inline-block;
@@ -3134,7 +3140,6 @@ figure {
 }
 
 .tabs-wrap .dsc {
-  font-size: 14px;
   line-height: 179%;
   color: var(--color-gray_lite);
   margin: 0;
@@ -3182,7 +3187,7 @@ border-radius: 50%;
 }
 
 .author-info__row .tagname {
-  font-size: 12px;
+  font-size: 16px;
   line-height: 1.5;
   color: var(--color-gray_lite);
   margin: 0;
@@ -3193,7 +3198,7 @@ border-radius: 50%;
 }
 
 .author-info__row .item__label {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.7;
   color: var(--color-gray_lite);
   margin: 0 0 15px;
@@ -3215,7 +3220,7 @@ border-radius: 50%;
 .author-info__row .link {
   display: inline-block;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
@@ -3297,7 +3302,7 @@ border-radius: 50%;
 
 .reviews .title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-gray);
   margin: 0 0 40px;
@@ -3803,7 +3808,7 @@ border-radius: 50%;
 
 .discribe-author .title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: #000000;
   margin: 35px 0 0;
@@ -3824,7 +3829,7 @@ border-radius: 50%;
 
 .view-btn {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 0.3px;
   color: var(--color-gray_lite);
@@ -3888,7 +3893,7 @@ border-radius: 50%;
 
 .event-card__title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-gray);
   margin: 0;
@@ -3921,7 +3926,7 @@ border-radius: 50%;
 .event-card .para {
   padding-top: 10px;
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.8;
 
   color: #000000;
@@ -3967,7 +3972,7 @@ border-radius: 50%;
 
 .add-event-btn {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
@@ -3990,7 +3995,7 @@ border-radius: 50%;
 
 .author-media__title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: #000000;
   margin: 0;
@@ -4059,7 +4064,7 @@ border-radius: 50%;
 
 .follower-data .name {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: #3e3e3e;
@@ -4482,7 +4487,7 @@ border-radius: 50%;
   font-family: var(--base-font);
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 0.3px;
   color: #000000;
@@ -4563,7 +4568,7 @@ label.pseudo-checkbox {
   font-family: var(--base-font);
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 0.3px;
   color: #ffffff;
@@ -4836,7 +4841,7 @@ label.pseudo-checkbox {
   border-radius: 8px;
   padding: 10px clamp(25px, 10%, 55px);
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 30px;
   letter-spacing: 0.3px;
   color: #000000;
@@ -4868,7 +4873,7 @@ label.pseudo-checkbox {
   font-family: var(--base-font);
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 16px;
   letter-spacing: 0.3px;
   color: #ffffff;
@@ -4883,7 +4888,7 @@ label.pseudo-checkbox {
 .gener .user__text .genres .form-field .skip {
   padding-left: 50px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 16px;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5013,7 +5018,7 @@ label.pseudo-checkbox {
 
 .author-d-block .author_info .author_name {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5033,7 +5038,7 @@ label.pseudo-checkbox {
   background: var(--color-dark);
   border-radius: 39px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 0.3px;
   cursor: pointer;
@@ -5077,7 +5082,7 @@ label.pseudo-checkbox {
   font-family: var(--base-font);
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   color: #656565;
   max-width: 60%;
@@ -5255,7 +5260,7 @@ label.pseudo-checkbox {
 
 .plans .time {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 0.85;
   letter-spacing: 0.3px;
   color: #c0c0c0;
@@ -5264,7 +5269,7 @@ label.pseudo-checkbox {
 .plan__class {
   margin-bottom: 32px;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--color-dark_lite);
 }
@@ -5277,7 +5282,7 @@ label.pseudo-checkbox {
 .plan-card__body .plan__item {
   margin-bottom: 11px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 25px;
   color: #3e3e3e;
   padding-left: 36px;
@@ -5309,7 +5314,7 @@ label.pseudo-checkbox {
 .switch__btn {
   border: none;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.02em;
   color: #ffffff;
@@ -5341,7 +5346,7 @@ label.pseudo-checkbox {
 .switch__btn.current {
   cursor: inherit;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 25px;
   color: var(--color-gray);
   border: none;
@@ -5422,7 +5427,7 @@ label.pseudo-checkbox {
   padding: 15px 0;
   padding-left: 25px;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5503,7 +5508,7 @@ label.pseudo-checkbox {
 
 .created.flex .created_title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5512,7 +5517,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.about .dec {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5549,7 +5554,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.members .grid-items .grid-item .title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5669,7 +5674,7 @@ label.pseudo-checkbox {
   background: #f9f9f9;
   border-radius: 35px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 16px;
   letter-spacing: 0.3px;
   color: #000000;
@@ -5702,7 +5707,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.explore .name {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5718,7 +5723,7 @@ label.pseudo-checkbox {
 }
 
 .tab-body__inner.explore .post__dec {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5732,7 +5737,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.explore .post__react {
   gap: 73px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5765,7 +5770,7 @@ label.pseudo-checkbox {
   background: var(--bg-color_extra-lite);
   border-radius: 40px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 0.3px;
   color: #c0c0c0;
@@ -5798,7 +5803,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.explore .explore-inner .wegets .about-forum {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5806,7 +5811,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.explore .explore-inner .wegets .text {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -5814,7 +5819,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.explore .explore-inner .wegets .created-title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -6031,7 +6036,7 @@ label.pseudo-checkbox {
 }
 
 .contact_info .address .info span {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.19;
   color: var(--color-dark_lite-sec);
   flex: 1;
@@ -6060,7 +6065,7 @@ label.pseudo-checkbox {
 .form_header .dec {
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #000000;
@@ -6142,7 +6147,7 @@ label.pseudo-checkbox {
   max-width: 536px;
   width: 100%;
   height: 44px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.2;
   color: var(--color-dark_lite-sec);
   background: var(--light-color);
@@ -6743,7 +6748,7 @@ figure.media-item video{
   box-sizing: border-box;
   cursor: text;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   padding: 0;
 }
 
@@ -7262,4 +7267,30 @@ label .text .inner{
   .event-content{
     display: block;
   }
+}
+
+.switch-to-plan{
+  text-align: center;
+}
+
+.switch-to-plan a{
+  border: none;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    background: var(--color-highlight);
+    border-radius: 32px;
+    padding: 13px 50px;
+    cursor: pointer;
+    margin-top: 25px;
+    text-align: center;
+    height: 50px;
+    align-items: center;
+    display: inline-block;
+}
+
+.switch-to-plan a:hover{
+  opacity: .7;
 }
