--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -30,7 +30,7 @@ body {
   font-family: var(--base-font);
   font-weight: 400;
   overflow-x: hidden;
-  font-size: 20px;
+  font-size: 22px;
   line-height: 1.6;
 }
 
@@ -212,6 +212,124 @@ figure {
   margin-top: 60px;
 }
 
+/* ********************************* */
+/* ******** Mobile Off-Canvas ****** */
+/* ********************************* */
+.offcanvas.flex-auto-spb {
+  flex-direction: column;
+}
+
+.header__btn {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 500;
+  color: #ffffff;
+  display: inline-block;
+  background-color: var(--color-dark);
+  padding: 12px 32px;
+  border: 1px solid var(--color-dark);
+  border-radius: 100px;
+  transition: .3s;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+.header__btns {
+  gap: 16px;
+  padding-top: 40px;
+}
+
+.flex-ctr-spb {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.offcanvas .offcanvas__inner {
+  padding: 20px 0;
+}
+
+.menu-trigger{
+  cursor: pointer;
+}
+
+.offcanvas {
+  position: fixed;
+  min-height: 100vh;
+  width: 300px;
+  top: 0;
+  right: -300px;
+  transition: 0.3s;
+  padding: 0 25px 20px;
+  z-index: 99999;
+  background-color: #ffffff;
+  box-shadow: -1px 0 15px 0 #03030333;
+  max-width: 100%;
+}
+
+.offcanvas__close {
+  cursor: pointer;
+}
+
+.offcanvas__close svg {
+  pointer-events: none;
+}
+
+.offcanvas__logo {
+  max-width: 180px;
+}
+
+.offcanvas__nav {
+  padding: 50px 10px 30px;
+}
+
+.offcanvas__menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.offcanvas__menu__item-link {
+  font-size: 22px;
+  line-height: 1.2;
+  font-weight: 500;
+  font-family: var(--global-font);
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #4d6169;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.offcanvas__menu__item-link:hover {
+  color: var(--brand-color);
+}
+
+.offcanvas__menu__item:last-child a {
+  margin: 0;
+}
+
+.offcanvas__btns .header__btn {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.offcanvas__btns .header__btn:last-child {
+  margin: 0;
+}
+
+@media (max-width: 1080px) {
+  .offcanvas-open {
+    display: block;
+  }
+
+  .offcanvas-active.offcanvas {
+    right: 0;
+  }
+}
+
 /**************************
 *	  	Main CSS
 *	  	 Header
@@ -230,7 +348,7 @@ figure {
 
 .main-header .link {
   font-weight: 400;
-  font-size: 18px;
+  font-size:  22px;
   line-height: 156%;
   color: var(--color-dark);
   transition: 0.3s;
@@ -486,7 +604,7 @@ figure {
 
 .hero__form .input {
   font-weight: 400;
-  font-size: 18px;
+  font-size: 20px;
   /* line-height: 156%; */
   letter-spacing: 0.3px;
   color: #000000;
@@ -626,7 +744,7 @@ figure {
 
 @media (max-width: 767px) {
   .hero .title {
-    font-size: 34px;
+    font-size: 24px;
   }
 
   .hero .inner-content {
@@ -871,7 +989,7 @@ figure {
 }
 
 .entry-content p{
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.6;
   color: #000000;
   font-family: 'EB Garamond', serif!important;
@@ -942,7 +1060,7 @@ figure {
 .fig-content .heading {
   margin: 0 0 10px;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 156%;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -950,7 +1068,7 @@ figure {
 
 .fig-content .dsc {
   margin: 0;
-  font-size: 20px;
+  font-size: 22px;
   line-height: 156%;
   letter-spacing: 0.3px;
   color: var(--color-gray_extra-lite);
@@ -1128,7 +1246,7 @@ figure {
 
 .card .subtitle {
   font-weight: 400;
-  font-size: 13px;
+  font-size: 17px;
   line-height: 123%;
   letter-spacing: 0.3px;
   color: var(--color-gray_lite);
@@ -1448,7 +1566,7 @@ figure {
 }
 
 .widget-list .link {
-  font-size: 17px;
+  font-size: 20px;
   line-height: 1.2;
   letter-spacing: -0.204545px;
   color: #000000;
@@ -1492,7 +1610,7 @@ figure {
 
 .agreement-links .link {
   font-weight: 400;
-  font-size: 15px;
+  font-size: 19px;
   line-height: 1.3;
   letter-spacing: -0.204545px;
   color: #000000;
@@ -1811,10 +1929,17 @@ figure {
   }
 }
 
+.menu-trigger{
+  display: none;
+}
+
 @media (max-width: 1023px) {
-  .header-alt .search-bar,
-  .header-alt .right-side {
+  .header-alt .search-bar {
     display: none;
+  }
+
+  .menu-trigger{
+    display: block;
   }
 
   .header-alt {
@@ -1822,9 +1947,19 @@ figure {
   }
 }
 
+@media (max-width: 575px) {
+  .header-logo img{
+    height: 40px;
+  }
+}
+
 @media (max-width: 767px) {
   .header-alt {
     padding: 20px 0;
+  }
+
+  .author-type{
+    display: none;
   }
 }
 
@@ -1916,7 +2051,7 @@ figure {
 }
 
 .modal__form .label {
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.56;
   color: var(--color-gray);
   margin: 0 0 10px;
@@ -2125,7 +2260,7 @@ figure {
 
 .tab-content .message {
   max-width: 650px;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.5;
   color: var(--color-gray_lite);
   margin: 0;
@@ -3718,7 +3853,7 @@ border-radius: 50%;
 }
 
 .author-label {
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.79;
   color: var(--color-gray);
   margin: 0 auto 6px;
@@ -3726,7 +3861,7 @@ border-radius: 50%;
 }
 
 .author-email .link {
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.79;
   text-decoration-line: underline;
   color: #2091e2;
@@ -3739,7 +3874,7 @@ border-radius: 50%;
 }
 
 .author-location {
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.79;
   color: var(--color-gray);
   margin: 15px 0 30px;
@@ -3760,7 +3895,7 @@ border-radius: 50%;
 .author-credit p,
 .author-summary .dsc {
   margin: 0;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.79;
   display: flex;
   align-items: center;
@@ -3900,7 +4035,7 @@ border-radius: 50%;
 }
 
 .event-card__timezone {
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.79;
   color: #000000;
   margin: 0 0 20px;
@@ -3926,7 +4061,7 @@ border-radius: 50%;
 .event-card .para {
   padding-top: 10px;
   margin: 0;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.8;
 
   color: #000000;
@@ -4077,7 +4212,7 @@ border-radius: 50%;
 }
 
 .follower-data__row .text {
-  font-size: 12px;
+  font-size: 18px;
   line-height: 2;
   color: #3e3e3e;
   margin: 0;
@@ -4472,7 +4607,7 @@ border-radius: 50%;
   font-family: var(--base-font);
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.42;
   letter-spacing: 0.3px;
   color: var(--color-gray_lite);
@@ -4586,7 +4721,7 @@ label.pseudo-checkbox {
 }
 
 .page-user .singup-field {
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.42;
   letter-spacing: 0.3px;
   color: var(--color-gray_lite);
@@ -4602,7 +4737,7 @@ label.pseudo-checkbox {
   width: 100%;
   border-top: 1px solid #eeeeee;
   padding-top: 24px;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.42;
   letter-spacing: 0.3px;
   color: #828282;
@@ -5449,7 +5584,7 @@ label.pseudo-checkbox {
 
 .community_d-info .community-d__follower {
   font-weight: 400;
-  font-size: 15px;
+  font-size: 18px;
   line-height: 1.67;
   letter-spacing: 0.3px;
   color: var(--color-gray_lite);
@@ -5518,7 +5653,7 @@ label.pseudo-checkbox {
 
 .tab-body__inner.about .dec {
   font-weight: 400;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.56;
   letter-spacing: 0.3px;
   color: var(--color-gray);
@@ -6037,7 +6172,7 @@ label.pseudo-checkbox {
 }
 
 .contact_info .address .info span {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.19;
   color: var(--color-dark_lite-sec);
   flex: 1;
@@ -6066,7 +6201,7 @@ label.pseudo-checkbox {
 .form_header .dec {
   font-style: normal;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #000000;
@@ -6096,7 +6231,7 @@ label.pseudo-checkbox {
 }
 
 .label label{
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.67;
   color: #333333;
   display: block;
@@ -6274,7 +6409,7 @@ body .form textarea{
 }
 
 .faq__item-title {
-  font-size: 24px;
+  font-size: 28px;
   line-height: 1.3;
   font-family: var(--global-font);
   color: var(--dark-color);
@@ -6328,7 +6463,7 @@ body .form textarea{
 
 .faq__item-dsc {
   margin: 0;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.5;
   font-weight: 400;
   color: #000000;
@@ -7001,7 +7136,7 @@ iframe{
 
 .author-type ul li{
   padding: 10px 20px;
-  font-size: 13px;
+  font-size: 15px;
 }
 
 .author-type ul li.active{
