cominity page thumb size changed

--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -1011,8 +1011,9 @@ figure {
 }
 
 .Community-body-content .card .figure img {
-  height: 150px;
-  object-fit: cover;
+  height: initial;
+  object-fit: initial;
+  width: 100%;
 }
 
 .fig-content .subtitle {
