--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -7478,3 +7478,17 @@ label .text .inner{
 .guest .tab-panel{
   display: none;
 }
+
+@media (min-width: 1300px){
+  .book-search-author .grid-items {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+.book-search-author .books-card .card .figure img{
+  height: 100px!important;
+  width: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover!important;
+}
